<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/row_padding_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/row_padding_vertical">

    <TextView
        android:id="@+id/place"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bloodgroup"
        android:layout_alignStart="@+id/name"
        android:padding="3dp"
        android:text="@string/location_hint"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/bloodgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_margin="2dp"
        android:padding="5dp"
        android:text="@string/bloodgroup_hint"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bloodgroup"
        android:layout_toEndOf="@+id/bloodgroup"
        android:padding="3dp"
        android:text="@string/name_default"
        android:textColor="@color/colorPrimary"
        android:textSize="16dp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/callButton"
        android:layout_width="42dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@android:drawable/sym_action_call"
        android:contentDescription="@string/call_button_desc" />

    <TextView
        android:id="@+id/level"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/callButton"
        android:ems="10"

        android:text="@string/level_default" />

</RelativeLayout>